fixed overflow

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -198,7 +198,7 @@
   #intro .text-title,
   #past-editions .text-title,
   footer .text-title {
-    height: 2rem;
+    height: 1.8rem;
   }
 
   #intro {
